# vulkan-render-engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Vulkan  cmake-good  cmake_install.cmake  compile.sh  main  main.cpp  todo
inc/: camera.hpp  common.hpp  data_formats.hpp  eng_window.hpp  engine.hpp  engine_draw.hpp  engine_graphics.hpp  engine_init.hpp  error_setup.hpp  game_objects.hpp  memory_allocator.hpp  queue.hpp  swapchain_support.hpp
lib/: camera.cpp  eng_window.cpp  engine.cpp  engine_draw.cpp  engine_graphics.cpp  engine_init.cpp  error_setup.cpp  game_objects.cpp  memory_allocator.cpp  queue.cpp  swapchain_support.cpp
objects/test_object/: test.mtl
shaders/: shader.frag  shader.vert  vert.spv
shaders/spirv/: frag.spv  vert.spv
